--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Promocional</title>
+    <link rel="stylesheet" href="/style.css ">
 </head>
 <body>
 
     <header>
-        <h1>FashionTrend</h1>
-        <nav>
-          <a href="#intro">Início</a>
-          <a href="#carrossel">Coleção</a>
-          <a href="#produtos">Produtos</a>
-          <a href="#contato">Contato</a>
+      <h1 class="titulo">Mode Avenue</h1>
+      <nav class="navegador">
+          <a href="#intro">Begginin</a>
+          <a href="#carrossel">New Colection</a>
+          <a href="#produtos">Products</a>
+          <a href="#contato">Contact</a>
         </nav>
       </header>
       
